Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.71***

**   Support constant function calls for parameters. [many!]

***  Support SystemVerilog "logic", bug101.  [by Alex Duller]

* Verilator 3.712 2009/07/14

**   Patching SystemC is no longer required to trace sc_bvs.

***  Support zero-width constants in concatenations.  [Jeff Winston]

***  Add verilator --pins-uint8 option to use sc_in<uint8_t/uint16_t>.

***  Add verilator -V option, to show verbose version.

***  On WIDTH warnings, show variable name causing error.  [Jeff Winston]

**** Add BLKLOOPINIT error code, and describe --unroll-count.  [Jeff Winston]

* Verilator 3.711 2009/06/23

**** Support decimal constants of arbitrary widths. [Mark Marshall]

**** Fix error on case statement with all duplicate items, bug99. [Gary Thomas]

**** Fix segfault on unrolling for's with bad inits, bug90. [Andreas Olofsson]

**** Fix tristates causing "Assigned pin is neither...". [by Lane Brooks]

**** Fix compiler errors under Fedora release candidate 11. [Chitlesh Goorah]

* Verilator 3.710 2009/05/19

**   Verilator is now licensed under LGPL v3 and/or Artistic v2.0.

***  `__FILE__ now expands to a string, per draft SystemVerilog 2010(ish).

**** The front end parser has been re-factored to enable more SV parsing.
     Code should parse the same, but minor parsing bugs may pop up.

**** Verilator_includer is no longer installed twice, bug48.  [Lane Brooks]

**** Fix escaped identifiers with '.' causing conflicts, bug83.  [J Baxter]

**** Fix define formal arguments that contain newlines, bug84. [David A]

* Verilator 3.703 2009/05/02

***  Fix $clog2 calculation error with powers-of-2, bug81. [Patricio Kaplan]

**** Fix error with tasks that have output first, bug78.  [Andrea Foletto]

**** Fix "cloning" error with -y/--top-module, bug76. [Dimitris Nalbantis]
